change ingredients property to be a string, migrate and update database, web page runs

--- a/RecipeBox/appsettings.json
+++ b/RecipeBox/appsettings.json
@@ -1,11 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+      "DefaultConnection": "Server=localhost;Port=3306;database=recipe_box;uid=root;pwd=epicodus;"
+  }
 }
